dnl Process this file with autoconf to produce a configure script.
AC_INIT(component.c)
AM_INIT_AUTOMAKE(pc, 0.5)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(PC, pc, true)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
